--- a/coco.html
+++ b/coco.html
@@ -198,10 +198,7 @@
   </style>
 </head>
 <body>
-    <audio id="music-player" autoplay loop>
-        <source src="./images/30 Minute Deep Meditation Music for Positive Energy  Relax Mind Body, Inner Peace.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-      </audio>
+  
       <!-- Add this to your hazel.html page -->
       <div class="cloud"></div>
 
@@ -236,7 +233,7 @@
         However, I occasionally find myself the target of their playful teasing due to my diminutive size 
         and my love for my family. I am especially fond of the beach and irresistible charm.
     </p>
-    <video src="./images/cocoplaying.MOV" autoplay muted class="story-video"></video>
+    <video src="./images/H&C.mp4" autoplay muted class="story-video"></video>
     <p class="story-content">
         Despite these moments of sibling rivalry, I cherish the time we spend together, 
         and I am always looking forward to seeing both within the confines of our home 
